--- a/bankwithdb/src/App.scss
+++ b/bankwithdb/src/App.scss
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+%flex {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+@mixin flex($justify, $align, $direction, $gap) {
+  display: flex;
+  justify-content: $justify;
+  align-items: $align;
+  flex-direction: $direction;
+  gap: $gap;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.app-container {
+  min-height: 100vh;
+  background-color: rgb(133, 133, 184);
+
+  nav {
+    height: 70px;
+    background-color: rgb(76, 76, 133);
+    @include flex(space-between, center, row, 0);
+    padding: 25px;
+    list-style: none;
+
+    p {
+      font-size: 34px;
+      color: gray;
+    }
+
+    .nav-left {
+      @include flex(center, center, row, 50px);
+    }
+
+    .nav-li-flex {
+      @extend %flex;
+      gap: 30px;
+      cursor: pointer;
+      color: white;
+      font-size: 20px;
+    }
+
+    .nav-active {
+      background-color: white;
+      color: black;
+      border-radius: 5px;
+      padding: 5px 10px;
+    }
+
+    .li {
+      color: red;
+    }
   }
 }
