--- a/bankwithdb/src/App.scss
+++ b/bankwithdb/src/App.scss
@@ -16,6 +16,83 @@
   min-height: 100vh;
   background-color: rgb(133, 133, 184);
 
+  .form-register {
+    @include flex(center, center, column, 20px);
+    margin-top: 40px;
+
+    p {
+      font-size: 22px;
+      margin-bottom: 20px;
+    }
+
+    form {
+      border: 1px solid black;
+      background-color: white;
+      padding: 25px;
+      height: 400px;
+      width: 370px;
+      @include flex(center, center, column, 20px);
+
+      div {
+        @include flex(center, center, column, 20px);
+
+        input {
+          height: 30px;
+        }
+      }
+    }
+  }
+
+  .form-login {
+    @include flex(center, center, column, 20px);
+    margin-top: 40px;
+
+    p {
+      font-size: 22px;
+      margin-bottom: 20px;
+    }
+
+    form {
+      border: 1px solid black;
+      background-color: white;
+      padding: 25px;
+      height: 300px;
+      width: 370px;
+      @include flex(center, center, column, 20px);
+
+      div {
+        @include flex(center, center, column, 20px);
+
+        input {
+          height: 30px;
+        }
+      }
+    }
+  }
+
+  .home-container {
+    @include flex(center, center, row, 150px);
+    margin-top: 40px;
+
+    img {
+      width: 50%;
+    }
+
+    .home-summary {
+      @include flex(center, center, column, 50px);
+
+      .home-summ {
+        height: 150px;
+        background-color: white;
+        border-radius: 5px;
+        width: 200px;
+        padding: 10px;
+        font-size: 20px;
+        text-align: center;
+      }
+    }
+  }
+
   nav {
     height: 70px;
     background-color: rgb(76, 76, 133);
@@ -53,45 +130,121 @@
   }
 
   .accounts-container {
-    @extend %flex;
+    @include flex(center, center, column, 50px);
     margin-top: 40px;
-  }
-  .create-account-form {
-    @include flex(space-between, flex-start, row, 10px);
-    width: 600px;
-    border: 1px solid black;
-    border-radius: 5px;
-    padding: 20px;
+    padding-bottom: 40px;
 
-    input {
-      height: 30px;
+    .filter-sort-container {
+      @include flex(center, center, row, 150px);
+      margin-top: 40px;
+      margin-bottom: 120px;
     }
 
-    .photo-input {
-      background-color: white;
-      height: 22px;
-      border: 1px solid black;
-      margin-bottom: 20px;
-    }
+    .create-account-form {
+      @include flex(space-between, flex-start, row, 10px);
+      width: 600px;
+      border: 1px solid white;
+      border-radius: 5px;
+      padding: 20px;
 
-    label {
-      color: white;
-      font-size: 22px;
-    }
+      input {
+        height: 30px;
+      }
 
-    .account-form-left {
-      @include flex(flex-start, center, column, 10px);
-      .name-surname {
+      .photo-input {
+        background-color: white;
+        height: 22px;
+        border: 1px solid black;
+        margin-bottom: 20px;
+      }
+
+      label {
+        color: white;
+        font-size: 22px;
+      }
+
+      .account-form-left {
+        @include flex(flex-start, center, column, 10px);
+        .name-surname {
+          @include flex(center, center, column, 10px);
+        }
+      }
+      .photo-container {
         @include flex(center, center, column, 10px);
+
+        img {
+          height: 120px;
+          border-radius: 5px;
+        }
       }
     }
-    .photo-container {
-      @include flex(center, center, column, 10px);
+    .acc-summary-container {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      gap: 20px;
+
+      .summary-container {
+        height: 150px;
+        background-color: white;
+        border-radius: 5px;
+        width: 200px;
+        padding: 10px;
+        font-size: 20px;
+        text-align: center;
+      }
+    }
+  }
+
+  .accounts-list-container {
+    width: 80%;
+    border: 1px solid white;
+    border-radius: 5px;
+    padding: 25px;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-direction: column;
+
+    li {
+      list-style: none;
+      padding: 15px;
+      font-size: 18px;
+      @include flex(space-between, center, row, 20px);
+      border: 1px solid black;
 
       img {
         height: 120px;
         border-radius: 5px;
       }
+
+      .delete-block {
+        @include flex(center, center, column, 20px);
+      }
     }
   }
+  .sum-input {
+    width: 100px;
+    height: 40px;
+  }
+}
+
+.small-btn {
+  height: 40px;
+  padding: 10px;
+  border: 1px solid transparent;
+  background-color: gray;
+  width: 100px;
+  cursor: pointer;
+  &:hover {
+    background-color: white;
+    border: 1px solid black;
+  }
+}
+
+select {
+  width: 160px;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 18px;
+  cursor: pointer;
 }
