--- a/bankwithdb/src/App.scss
+++ b/bankwithdb/src/App.scss
@@ -143,8 +143,7 @@
     .create-account-form {
       @include flex(space-between, flex-start, row, 10px);
       width: 600px;
-      border: 1px solid white;
-      border-radius: 5px;
+
       padding: 20px;
 
       input {
@@ -247,4 +246,12 @@ select {
   border-radius: 5px;
   font-size: 18px;
   cursor: pointer;
+}
+
+.border {
+  border: 1px solid white;
+  border-radius: 5px;
+  margin-top: 20px;
+  padding: 15px;
+  text-align: center;
 }
