--- a/bankwithdb/src/App.scss
+++ b/bankwithdb/src/App.scss
@@ -255,3 +255,21 @@ select {
   padding: 15px;
   text-align: center;
 }
+
+.error-msg-container {
+  position: fixed;
+  min-height: 100vh;
+  min-width: 100%;
+  left: 0;
+  top: 0;
+  background-color: rgba(128, 128, 128, 0.651);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .error-msg {
+    color: red;
+    font-size: 32px;
+    border-bottom: 2px solid red;
+  }
+}
