--- a/bankwithdb/src/App.scss
+++ b/bankwithdb/src/App.scss
@@ -29,7 +29,7 @@
       border: 1px solid black;
       background-color: white;
       padding: 25px;
-      height: 400px;
+      height: 450px;
       width: 370px;
       @include flex(center, center, column, 20px);
 
@@ -56,9 +56,9 @@
       border: 1px solid black;
       background-color: white;
       padding: 25px;
-      height: 300px;
+      height: 400px;
       width: 370px;
-      @include flex(center, center, column, 20px);
+      @include flex(center, center, column, 30px);
 
       div {
         @include flex(center, center, column, 20px);
@@ -85,10 +85,12 @@
         height: 150px;
         background-color: white;
         border-radius: 5px;
-        width: 200px;
-        padding: 10px;
+        width: 240px;
+        padding: 15px;
         font-size: 20px;
-        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
     }
   }
@@ -143,7 +145,6 @@
     .create-account-form {
       @include flex(space-between, flex-start, row, 10px);
       width: 600px;
-
       padding: 20px;
 
       input {
@@ -187,9 +188,11 @@
         background-color: white;
         border-radius: 5px;
         width: 200px;
-        padding: 10px;
+        padding: 15px;
         font-size: 20px;
-        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
     }
   }
@@ -233,6 +236,7 @@
   border: 1px solid transparent;
   background-color: gray;
   width: 100px;
+  margin-top: 20px;
   cursor: pointer;
   &:hover {
     background-color: white;
@@ -240,8 +244,21 @@
   }
 }
 
+.sm-btn {
+  height: 40px;
+  padding: 10px;
+  border: 1px solid transparent;
+  background-color: gray;
+  width: 100px;
+
+  cursor: pointer;
+  &:hover {
+    background-color: white;
+    border: 1px solid black;
+  }
+}
 select {
-  width: 160px;
+  width: 180px;
   padding: 5px;
   border-radius: 5px;
   font-size: 18px;
